# CompNaturalUFMG20152

./: .gitignore  BinaryTree.h  CMakeLists.txt  ExecutionParameters.h  ExpressionParse.h  FileParser.cpp  FileParser.h  Operators.cpp  Operators.h  Population.cpp  Population.h  Terminals.cpp  Terminals.h  TypesDefinition.h  main.cpp  tree.hh
muparser/src/: muParser.cpp  muParserBase.cpp  muParserBytecode.cpp  muParserCallback.cpp  muParserError.cpp  muParserTokenReader.cpp
